--- a/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
+++ b/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" MinWidth="800" MinHeight="450">
+        Title="MainWindow" Height="450" Width="1152" MinHeight="450" MinWidth="1152">
 
     <Grid>
 
@@ -27,7 +27,7 @@
                 <DataGridTextColumn Binding="{Binding Path=Description}" MinWidth="50" Width="Auto"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Grid Grid.Row="0" Grid.Column="1" Margin="0,0,8,0">
+        <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Width="417">
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width = "200" />
@@ -38,8 +38,9 @@
                 <RowDefinition Height = "*" />
             </Grid.RowDefinitions>
 
-            <Grid Margin="10,0,-81,0">
+            <Grid Margin="10,0,-268,0">
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width = "auto" />
                     <ColumnDefinition Width = "auto" />
                     <ColumnDefinition Width = "auto" />
                 </Grid.ColumnDefinitions>
@@ -54,11 +55,17 @@
                     <Label x:Name="AnswerLabel" VerticalAlignment="Top" Height="27" Margin="0,0,0,0" HorizontalAlignment="Left" Width="128"/>
                     <Button x:Name="ShowButton" IsEnabled="False" Content="Show responses" Click="Show_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,20,0"/>
                 </StackPanel>
-                <StackPanel Margin="133,0,35,0" Grid.Row="0" Grid.ColumnSpan="2">
-                    <Button Name="CreateButton" Content="Create network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0" Click="CreateButton_Click" IsEnabled="False"/>
-                    <Button Name="TrainButton" Content="Train"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="TrainButton_Click" IsEnabled="False"/>
-                    <Label Name="ProgressLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,0,0"/>
-                    <Button Name="CancelTrainButton" Content="Cancel"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,20,0" Click="CancelTrainButton_Click" IsEnabled="False"/>
+                <StackPanel Margin="0,0,0,0" Grid.Row="0" Grid.Column="1">
+                    <Label x:Name="ProgressLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,0,0"/>
+                </StackPanel>
+                <StackPanel Margin="0,0,0,-272" Grid.Row="0" Grid.Column="2">
+                    <Button x:Name="CreateButton" Content="Create network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0" Click="CreateButton_Click" IsEnabled="False"/>
+                    <Button x:Name="TrainButton" Content="Train"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="TrainButton_Click" IsEnabled="False"/>
+                    <Button x:Name="CancelTrainButton" Content="Cancel"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CancelTrainButton_Click" IsEnabled="False"/>
+                    <Button Name="LoadNetworkButton" Content="Load network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0" Click="CreateButton_Click" IsEnabled="False"/>
+                    <Button Name="SaveNetworkButton" Content="Save network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CreateButton_Click" IsEnabled="False"/>
+                    <Button Name="Button3" Content=""  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CreateButton_Click" IsEnabled="False"/>
+                    <Button Name="Button4" Content=""  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="TrainButton_Click" IsEnabled="False"/>
                 </StackPanel>
             </Grid>
             <DataGrid AutoGenerateColumns="False" 
