--- a/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
+++ b/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="1152" MinHeight="450" MinWidth="1152">
+        Title="Salary Analyzer" Height="450" Width="1110" MinHeight="450" MinWidth="1110" WindowStartupLocation="CenterScreen">
 
     <Grid>
 
@@ -30,52 +30,34 @@
         <Grid Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Width="417">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width = "200" />
+                <ColumnDefinition Width = "auto" />
+                <ColumnDefinition Width = "*" />
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height = "auto" />
                 <RowDefinition Height = "*" />
             </Grid.RowDefinitions>
 
-            <Grid Margin="10,0,-268,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width = "auto" />
-                    <ColumnDefinition Width = "auto" />
-                    <ColumnDefinition Width = "auto" />
-                </Grid.ColumnDefinitions>
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height = "*" />
-                </Grid.RowDefinitions>
-
-                <StackPanel Margin="0,0,0,0" Grid.Row="0" Grid.Column="0">
-                    <Button Name="LoadButton" Content="Load questions" Click="Button_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0"/>
-                    <Button Name="CalculateButton" IsEnabled="False" Content="Calculate amount" Click="Calculate_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0"/>
-                    <Label x:Name="AnswerLabel" VerticalAlignment="Top" Height="27" Margin="0,0,0,0" HorizontalAlignment="Left" Width="128"/>
-                    <Button x:Name="ShowButton" IsEnabled="False" Content="Show responses" Click="Show_Click" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,20,0"/>
-                </StackPanel>
-                <StackPanel Margin="0,0,0,0" Grid.Row="0" Grid.Column="1">
-                    <Label x:Name="ProgressLabel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="128" Height="27" Margin="0,0,0,0"/>
-                </StackPanel>
-                <StackPanel Margin="0,0,0,-272" Grid.Row="0" Grid.Column="2">
-                    <Button x:Name="CreateButton" Content="Create network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0" Click="CreateButton_Click" IsEnabled="False"/>
-                    <Button x:Name="TrainButton" Content="Train"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="TrainButton_Click" IsEnabled="False"/>
-                    <Button x:Name="CancelTrainButton" Content="Cancel"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CancelTrainButton_Click" IsEnabled="False"/>
-                    <Button Name="LoadNetworkButton" Content="Load network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,20,20,0" Click="CreateButton_Click" IsEnabled="False"/>
-                    <Button Name="SaveNetworkButton" Content="Save network"  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CreateButton_Click" IsEnabled="False"/>
-                    <Button Name="Button3" Content=""  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="CreateButton_Click" IsEnabled="False"/>
-                    <Button Name="Button4" Content=""  HorizontalAlignment="Right" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,20,0" Click="TrainButton_Click" IsEnabled="False"/>
-                </StackPanel>
-            </Grid>
             <DataGrid AutoGenerateColumns="False" 
-                      Grid.Row="1" Grid.Column="0"
+                      Grid.Row="0" Grid.Column="0"
                       x:Name="answerGrid"
-                      VerticalAlignment="Stretch" Margin="0,10,-70,10" HorizontalAlignment="Right" Width="261">
+                      VerticalAlignment="Stretch" Margin="0,10" HorizontalAlignment="Right" Width="261">
                 <DataGrid.Columns>
                     <DataGridTextColumn Binding="{Binding Response}" MinWidth="50" Width="Auto"/>
                 </DataGrid.Columns>
             </DataGrid>
+            <StackPanel Margin="5,10,10,5" Grid.Row="0" Grid.Column="1" Width="141">
+                <Button Name="LoadButton" Content="Load questions" Click="Button_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0"/>
+                <Button Name="CalculateButton" IsEnabled="False" Content="Calculate amount" Click="Calculate_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,0,0"/>
+                <Button x:Name="ShowButton" IsEnabled="False" Content="Show responses" Click="Show_Click" HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0"/>
+                <Label x:Name="AnswerLabel" VerticalAlignment="Top" Height="27" Margin="0,5,0,0" HorizontalAlignment="Center" Width="128"/>
+                <Button x:Name="CreateButton" Content="Create inputs"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,0,0" Click="CreateButton_Click" IsEnabled="False"/>
+                <Button x:Name="LoadInputsButton" Content="Load inputs"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="LoadInputs_Click" IsEnabled="False"/>
+                <Button x:Name="SaveInputsButton" Content="Save inputs"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="SaveInputs_Click" IsEnabled="False"/>
+                <Button x:Name="TrainButton" Content="Train"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0,37,0,0" Click="TrainButton_Click" IsEnabled="False"/>
+                <Button x:Name="LoadNetworkButton" Content="Load network"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="LoadNetwork_Click" IsEnabled="False"/>
+                <Button x:Name="SaveNetworkButton" Content="Save network"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="SaveNetwork_Click" IsEnabled="False"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
