--- a/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
+++ b/SalaryDataAnalyzer/SalaryDataAnalyzer/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Salary Analyzer" Height="450" Width="1110" MinHeight="450" MinWidth="1110" WindowStartupLocation="CenterScreen">
+        Title="Salary Analyzer" Height="500" Width="1110" MinHeight="500" MinWidth="1110" WindowStartupLocation="CenterScreen">
 
     <Grid>
 
@@ -58,6 +58,7 @@
                 <Button x:Name="TrainTestButton" Content="Train &amp; Test"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0,5,0,0" Click="TrainTestButton_Click" IsEnabled="False"/>
                 <Button x:Name="LoadNetworkButton" Content="Load network"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="LoadNetwork_Click" IsEnabled="False"/>
                 <Button x:Name="SaveNetworkButton" Content="Save network"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="6,5,7,0" Click="SaveNetwork_Click" IsEnabled="False"/>
+                <Button x:Name="CalcButton" Content="Calculate"  HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" Height="27" Margin="0,37,0,0" Click="CalcButton_Click" IsEnabled="False"/>
             </StackPanel>
         </Grid>
     </Grid>
